<resources>
    <string name="app_name">Academy Minsk Movies</string>

    <string name="released_title">Released:</string>
    <string name="button_movie_trailer">Movie Trailer</string>
    <string name="overview_title">Overview:</string>
    <string name="generic_error">Something went wrong</string>

    <string name="content_description_movie_backdrop">Movie Backdrop</string>
    <string name="content_description_movie_poster">Movie Poster</string>
    <string name="menu_coroutine_activity_title">Open Coroutines Activity</string>
    <string name="coroutine_create">Create</string>
    <string name="coroutine_start">Start</string>
    <string name="coroutine_stop">Stop</string>

    <string name="msg_oncreate">Coroutine created</string>
    <string name="msg_should_create_task">Must click \"create\" task first</string>

    <string name="done">Done!</string>

    <string name="error_load_movies">Can\'t load movies: %1$s</string>
    <string name="error_load_trailer">Can\'t load trailer: %1$s</string>

    <string name="menu_delete_all_movies">Delete all movies</string>
    <string name="menu_open_background_service_activity">Open Background Service Activity</string>

    <string name="dialog_title">Permission needed</string>
    <string name="dialog_message">To be able downloading requested file the app needs to access your files</string>
    <string name="dialog_ok">OK</string>
    <string name="notification_title">Downloading… %1$d%%</string>
    <string name="notification_message">In progress</string>
    <string name="channel_name">Default channel</string>
    <string name="channel_description">It is a channel for default notifications</string>
    <string name="notification_error_title">Error</string>
    <string name="notification_error_message">Image can not be downloaded</string>
</resources>
